--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
-    "@mdx-js/react": "^3.0.1",
-    "@tinacms/cli": "^1.5.52",
+    "@mdx-js/react": "^3.1.0",
+    "@tinacms/cli": "^1.6.12",
     "clsx": "^2.1.1",
-    "prism-react-renderer": "^2.3.1",
+    "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tinacms": "^2.1.0",
+    "tinacms": "^2.5.0",
     "title": "^3.5.3"
   },
   "devDependencies": {
@@ -43,5 +43,5 @@
   "engines": {
     "node": ">=20.0"
   },
-  "packageManager": "yarn@3.8.3+sha256.80da90fb3e01be3a5d851ed5290f86800870a208614a2e4211a3bfb5cdb62d61"
+  "packageManager": "yarn@3.8.3"
 }
