setting up firebase

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,23 @@
 # Get These values by creating a new project at app.tina.io
 TINA_TOKEN=
 NEXT_PUBLIC_TINA_CLIENT_ID=
+
+## .env.local
+
+# For Auth / General Use
+FIREBASE_API_KEY=
+
+# The main domain for Firebase authentication
+FIREBASE_AUTH_DOMAIN=
+
+# Firebase project ID
+FIREBASE_PROJECT_ID=
+
+# The storage used in the project (indirectly)
+FIREBASE_STORAGE_BUCKET=
+
+# Messaging service for the default app or a given app
+MESSAGING_SENDER_ID=
+
+# The App ID for the Docusaurus website integration
+APP_ID=
