--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@mdx-js/react": "^3.0.1",
     "@tinacms/cli": "^1.6.4",
     "clsx": "^2.1.1",
+    "docusaurus-plugin-dotenv": "^1.0.1",
+    "firebase": "^11.1.0",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "tinacms": "^2.2.4",
     "title": "^3.5.3"
   },
