--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.1.0",
-    "@tinacms/cli": "^1.7.0",
+    "@tinacms/cli": "0.0.0-9931d5a-20250106011423",
     "clsx": "^2.1.1",
     "prism-react-renderer": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tinacms": "^2.5.2",
+    "tinacms": "0.0.0-9931d5a-20250106011423",
     "title": "^3.5.3"
   },
   "devDependencies": {
